# uMario_Jakowski

./: .clang-tidy  .gitignore  CMakeLists.txt
CMake/: ConfigFlags.cmake  WarningSettings.cmake
Source/: Beetle.h  Block.cpp  Block.h  BlockDebris.cpp  Bowser.h  Bubble.h  BulletBill.h  BulletBillSpawner.h  CFG.cpp  CFG.h  Cheep.h  CheepSpawner.h  CommonHeader.h  Console.h  Core.cpp  Core.h  Event.h  Fire.h  Flag.h  Hammer.h  HammerBro.cpp  IMG.h  Koppa.cpp  Lakito.h  LevelEditor.h  LevelText.h  LoadingMenu.cpp  LoadingMenu.h  Main.cpp  MainMenu.h  Map.h  MapLevel.h  Menu.cpp  Menu.h  MenuManager.h  Mushroom.cpp  Music.cpp  Music.h  MusicManager.h  OptionsMenu.cpp  (+17 more)
Source/Common/: CFG.cpp  CFG.h  Core.cpp  Core.h  Event.cpp  Event.h  GameState.cpp  GameState.h  MusicHelper.cpp  MusicHelper.h  Point.h  Rect.h  Vector2.cpp  Vector2.h
Source/GameObjects/: Block.cpp  Block.h  BlockDebris.cpp  BlockDebris.h  Bubble.cpp  Bubble.h  Coin.cpp  Coin.h  Flag.cpp  Flag.h  Pipe.cpp  Pipe.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Points.cpp  Points.h
Source/Graphics/: IMG.cpp  IMG.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture.cpp
Source/Levels/: LevelEditor.cpp  LevelEditor.h  LevelText.cpp  LevelText.h  Map.cpp  Map.h  MapLevel.cpp  MapLevel.h  MinionCollisions.h
Source/Menus/: AboutMenu.cpp  AboutMenu.h  Console.cpp  Console.h  LoadingMenu.cpp  LoadingMenu.h  MainMenu.cpp  MainMenu.h  Menu.cpp  Menu.h  MenuManager.cpp  MenuManager.h  MenuOption.cpp  MenuOption.h  OptionsMenu.cpp  (+3 more)
uNext/: AboutMenu.cpp  AboutMenu.h  BlockDebris.h  Bowser.cpp  Bowser.h  BulletBill.cpp  BulletBill.h  BulletBillSpawner.cpp  CFG.h  Cheep.cpp  Cheep.h  CheepSpawner.cpp  Coin.h  Console.h  Core.h  Event.cpp  Fire.h  FireBall.cpp  Flag.cpp  Flower.cpp  Goombas.cpp  Goombas.h  HammerBro.h  IMG.cpp  IMG.h  Lakito.cpp  LevelEditor.cpp  LoadingMenu.h  MainMenu.cpp  Map.h  MapLevel.cpp  MenuManager.cpp  MenuOption.cpp  Minion.cpp  MusicManager.cpp  OptionsMenu.h  PauseMenu.cpp  Pipe.cpp  Plant.cpp  Player.cpp  (+17 more)
(+61 files in other folders)
